# kaleidoscope

./: CMakeLists.txt  README.md
include/: Application.hpp  Line.hpp
src/: application.cpp  main.cpp
